--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "ski-telegram-bot",
+  "name": "ski-track-notifier",
   "version": "1.0.0",
   "description": "This is the telegram bot to check the status of ski tracks in Finland",
   "main": "index.js",
   "dependencies": {
-    "aws-lambda": "^1.0.6",
-    "axios": "^0.24.0",
-    "uuid": "^8.3.2"
+    "@aws-sdk/client-sns": "^3.45.0",
+    "aws-lambda": "^1.0.7",
+    "axios": "^0.24.0"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.83",
-    "@types/aws-sdk": "^2.7.0",
+    "@types/aws-lambda": "^8.10.89",
     "@types/axios": "^0.14.0",
     "@types/node": "^16.9.4",
     "@types/uuid": "^8.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
     "webpack-glob-entry": "^2.1.1"
   },
   "scripts": {
