--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ski-track-notifier",
   "version": "1.0.0",
-  "description": "This is the telegram bot to check the status of ski tracks in Finland",
+  "description": "This is the notifier of the status of ski tracks in Finland",
   "main": "index.js",
   "dependencies": {
     "@aws-sdk/client-sns": "^3.45.0",
@@ -15,8 +15,8 @@
     "@types/uuid": "^8.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
     "webpack-glob-entry": "^2.1.1"
   },
   "scripts": {
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com-me:Grenguar/aws-cdk-api-workshop.git"
+    "url": "git@github.com-me:Grenguar/ski-track-condition-notifier.git"
   },
   "author": "Igor Soroka",
   "license": "ISC"
