--- a/infra/package.json
+++ b/infra/package.json
@@ -13,9 +13,10 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "2.3.0",
+    "esbuild": "^0.14.10",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "2.3.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.4.3"
   },
