--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "@types/node": "^16.9.4",
     "@types/uuid": "^8.3.1",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.4.3",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-glob-entry": "^2.1.1"
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
