--- a/infra/package.json
+++ b/infra/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "infra-ski-telegram-bot",
+  "name": "infra-ski-track-notifier",
   "version": "0.1.0",
   "bin": {
-    "infra2": "bin/infra2.js"
+    "infra2": "bin/infra.js"
   },
   "scripts": {
     "build": "tsc",
