reorganized the repo

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ node_modules
 .idea
 *.js
 .DS_Store
+*.js
+!jest.config.js
+*.d.ts
+node_modules
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
+.vscode
