--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "@aws-sdk/client-sns": "^3.45.0",
+    "@types/jest": "^26.0.10",
+    "@types/node": "10.17.27",
+    "aws-cdk": "2.3.0",
+    "aws-cdk-lib": "2.3.0",
     "aws-lambda": "^1.0.7",
     "axios": "^0.24.0"
   },
@@ -13,15 +17,17 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^16.9.4",
     "@types/uuid": "^8.3.1",
-    "ts-loader": "^9.2.6",
     "typescript": "^4.4.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com-me:Grenguar/ski-track-condition-notifier.git"
+    "url": "git@github.com:Grenguar/ski-track-condition-notifier.git"
   },
   "author": "Igor Soroka",
   "license": "ISC"
