--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,32 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "es6",
+    "module": "commonjs",
+    "lib": [
+      "ESNext"
+    ],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "typeRoots": ["./node_modules/@types"],
-    "outDir": "code"
+    "declaration": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": false,
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
   },
-  "exclude": ["infra"],
+  "exclude": [
+    "node_modules",
+    "cdk.out"
+  ]
 }
