--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "dependencies": {
     "@aws-sdk/client-sns": "^3.45.0",
-    "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
     "aws-cdk": "2.3.0",
     "aws-cdk-lib": "2.3.0",
     "aws-lambda": "^1.0.7",
@@ -17,7 +15,8 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^16.9.4",
     "@types/uuid": "^8.3.1",
-    "typescript": "^4.4.3"
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6"
   },
   "scripts": {
     "build": "tsc",
