--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "aws-cdk": "2.3.0",
     "aws-cdk-lib": "2.3.0",
     "aws-lambda": "^1.0.7",
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "constructs": "^10.0.24",
+    "esbuild": "^0.14.10",
+    "luxon": "^2.3.0",
+    "prettier": "^2.5.1",
+    "source-map-support": "^0.5.16",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.89",
-    "@types/axios": "^0.14.0",
-    "@types/node": "^16.9.4",
+    "@types/jest": "^26.0.24",
+    "@types/luxon": "^2.0.8",
+    "@types/node": "^14.5.0",
     "@types/uuid": "^8.3.1",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6"
